add built app.js for button link on service page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4239,7 +4239,9 @@ body {
   }
 
   .page main .privacy-page .privacy-section .side-nav {
-    display: block !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
 
   .footer {
