--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2276,6 +2276,11 @@ body {
             .save-btn {
               width: 100%;
             }
+            .delete-btn {
+              height: 42px;
+              width: 150px;
+              margin-top: 28px;
+            }
             a {
               &.save-btn {
                 padding-top: 10px;
