--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2669,6 +2669,9 @@ body {
             .review-item {
               width: 260px;
               left: 30px;
+              .description {
+                width: 250px;
+              }
             }
           }
           .main_description:nth-of-type(1) {
