--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2888,7 +2888,7 @@ body {
 
   .segment.mobile-navbar .secondary.menu .right-menu .mobile-register .primary-button {
     padding: 7px;
-    font-size: 10px !important;
+    font-size: 14px !important;
   }
 
   .segment.mobile-navbar .menu .dropdown.services .text {
@@ -3279,7 +3279,7 @@ body {
   }
 
   .page .main .about-page .about-section:nth-of-type(5) .alice-carousel .alice-carousel__dots {
-    text-align: center !important;
+    display: none !important;
   }
 
   .page .main .about-page .about-section:nth-of-type(5) .alice-carousel_prev_btn,
@@ -3769,7 +3769,6 @@ body {
 @media (min-width: 768px) {
   .segment.mobile-navbar .secondary.menu .right-menu .mobile-register .primary-button {
     padding: 10px 20px;
-    font-size: 14px !important;
   }
 
   .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item {
@@ -4035,10 +4034,6 @@ body {
     width: 933px !important;
   }
 
-  .segment.navbar .primary-button {
-    font-size: 14px !important;
-  }
-
   .page {
     padding-top: 64px;
   }
@@ -4164,7 +4159,7 @@ body {
   }
 
   .segment.navbar .logo img {
-    width: 115px !important;
+    width: 89px !important;
   }
 
   .segment.navbar .nav-color {
@@ -4173,7 +4168,7 @@ body {
   }
 
   .segment.navbar .nav-color .text {
-    padding-top: 8px;
+    padding-top: 2px;
   }
 
   .segment.navbar .menu .ui.buttons a {
@@ -4411,6 +4406,28 @@ body {
 
   .page .main .about-page .about-header .header-gradient .header-description .counter-box .box p {
     font-size: 12px;
+  }
+
+  .page .main .about-page .about-section:nth-of-type(5) {
+    margin-top: 1250px;
+    margin-bottom: 100px;
+  }
+
+  .page .main .about-page .about-section:nth-of-type(5) .alice-carousel {
+    margin-left: 0;
+  }
+
+  .page .main .about-page .about-section:nth-of-type(5) .alice-carousel .alice-carousel__stage-item {
+    width: 100% !important;
+  }
+
+  .page .main .about-page .about-section:nth-of-type(5) .alice-carousel .alice-carousel__dots {
+    display: none !important;
+  }
+
+  .page .main .about-page .about-section:nth-of-type(5) .alice-carousel_prev_btn,
+  .page .main .about-page .about-section:nth-of-type(5) .alice-carousel_next_btn {
+    display: none;
   }
 
   .page .main .about-page .about-section .sub_title {
@@ -4670,7 +4687,7 @@ body {
   }
 
   .footer img {
-    width: 30px !important;
+    width: 89px !important;
   }
 
   .footer h5 {
@@ -4955,10 +4972,6 @@ body {
 
   .footer {
     min-height: 45vh;
-  }
-
-  .footer img {
-    width: 30px !important;
   }
 }
 
