update managed hosting style for responsive step1

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1214,6 +1214,16 @@ body {
       @media (min-width: 1366px) {
         padding: 30px 20px;        
       }
+      @media (min-width: 1920px) {
+        &.hosting {
+          padding: 30px 50px;
+          .title {
+            h3 {
+              font-size: 18px;
+            }
+          }
+        }
+      }
     }
     .text-card {
       padding: 40px;
