--- a/public/css/app.css
+++ b/public/css/app.css
@@ -910,6 +910,16 @@ body {
   width: 100px;
 }
 
+@media (min-width: 1280px) {
+  .page .main .plan-item .text-item p {
+    font-size: 16px;
+  }
+
+  .page .main .plan-item .description h3 span {
+    font-size: 16px;
+  }
+}
+
 .page .main .badge-item {
   background: transparent;
   height: 100%;
@@ -1533,10 +1543,10 @@ body {
 }
 
 .page .main .text-card.hosting {
-  padding: 20px;
+  padding: 30px;
   height: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .page .main .text-card.hosting .title h3 {
@@ -1566,6 +1576,12 @@ body {
 @media (min-width: 414px) {
   .page .main .text-card {
     padding: 60px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .page .main .text-card.hosting .title h3 {
+    font-size: 16px;
   }
 }
 
@@ -2612,6 +2628,24 @@ body {
   margin-top: 30px;
 }
 
+.page .main .hosting-page .hosting-section.server-group .server-item .server-cards .deploy-item {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: flex-start;
+}
+
+.page .main .hosting-page .hosting-section.server-group .server-item .server-cards .deploy-item .text-item {
+  margin-top: 15px;
+  text-align: left;
+}
+
+.page .main .hosting-page .hosting-section.server-group .server-item .server-cards .deploy-item .text-item h3 {
+  margin-bottom: 20px;
+  color: #fff;
+}
+
 .page .main .hosting-page .hosting-section.manage {
   padding: 100px 0px 50px 0px;
   background: linear-gradient(to bottom, #09133a 0%, #070e28 100%);
@@ -2633,10 +2667,10 @@ body {
 }
 
 .page .main .hosting-page .hosting-section.manage .header {
-  justify-content: space-around;
-  display: flex;
   margin-top: 20px;
   position: relative;
+  overflow-x: auto;
+  display: block;
 }
 
 .page .main .hosting-page .hosting-section.manage .header hr {
@@ -2644,6 +2678,13 @@ body {
   border-color: #202c5a;
   width: 80%;
   top: 12px;
+  left: 80px;
+}
+
+.page .main .hosting-page .hosting-section.manage .header .ScrollArea {
+  display: flex;
+  min-width: 736px;
+  justify-content: space-between;
 }
 
 .page .main .hosting-page .hosting-section.manage .header .manage-item {
@@ -2708,7 +2749,6 @@ body {
 
 .page .main .hosting-page .hosting-section.manage .body .item .text p {
   text-align: left;
-  font-size: 13px;
 }
 
 .page .main .hosting-page .hosting-section.manage .body .item .avatar {
@@ -2739,10 +2779,10 @@ body {
 }
 
 .page .main .hosting-page .hosting-section.scale .header {
-  justify-content: space-around;
-  display: flex;
   margin-top: 20px;
   position: relative;
+  overflow-x: auto;
+  display: block;
 }
 
 .page .main .hosting-page .hosting-section.scale .header hr {
@@ -2750,6 +2790,13 @@ body {
   border-color: #202c5a;
   width: 80%;
   top: 12px;
+  left: 80px;
+}
+
+.page .main .hosting-page .hosting-section.scale .header .ScrollArea {
+  display: flex;
+  min-width: 736px;
+  justify-content: space-between;
 }
 
 .page .main .hosting-page .hosting-section.scale .header .manage-item {
@@ -4075,6 +4122,43 @@ body {
     margin-top: 160px;
   }
 
+  .page .main .hosting-page .hosting-section.server-group .header {
+    align-items: flex-end;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .header p {
+    text-align: center;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .server-item .server-cards.custom {
+    flex-direction: column;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .header hr {
+    width: 616px;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .body .item {
+    flex-direction: column;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .body .item .text {
+    padding: 80px 10px 20px 10px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .header hr {
+    width: 595px;
+    left: 80px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .body .item {
+    flex-direction: column;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .body .item .text {
+    padding: 80px 10px 20px 10px;
+  }
+
   .page .main .login-page.register {
     padding-top: 50px !important;
   }
@@ -5311,6 +5395,72 @@ body {
 
   .page .main .hosting-page .hosting-section.starter-group {
     margin-top: -140px;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .header {
+    align-items: unset;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .header p {
+    font-size: 18px;
+    text-align: unset;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .server-item p {
+    font-size: 18px;
+  }
+
+  .page .main .hosting-page .hosting-section.server-group .server-item .server-cards.custom {
+    flex-direction: column;
+  }
+
+  .page .main .hosting-page .hosting-section.manage p {
+    font-size: 18px;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .header hr {
+    width: 90%;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .header .manage-item p {
+    font-size: 16px;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .body .item {
+    flex-direction: row;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .body .item .text {
+    padding: 80px 30px 20px 30px;
+  }
+
+  .page .main .hosting-page .hosting-section.manage .body .item .text p {
+    font-size: 16px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale p {
+    font-size: 18px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .header hr {
+    width: 87%;
+    left: 100px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .header .manage-item p {
+    font-size: 16px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .body .item {
+    flex-direction: row;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .body .item .text {
+    padding: 80px 30px 20px 30px;
+  }
+
+  .page .main .hosting-page .hosting-section.scale .body .item .text p {
+    font-size: 16px;
   }
 
   .page .main .login-page.register {
