adjust text card

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1547,6 +1547,7 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
+  background: none;
 }
 
 .page .main .text-card.hosting .title h3 {
