--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1272,6 +1272,7 @@ body {
         height: 100%;
         display: flex;
         justify-content: center;
+        background: none;
         .title {
           h3 {
             font-size: 18px;
