adjust mobile responsive style for the managed hosting page for on the internet explorer

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -771,6 +771,8 @@ body {
             right: 0;
             top: 2px;
             fill: #8088a4;
+            width: 20px;
+            height: 20px;
             &:hover {
               fill: #fff;
             }
@@ -1176,6 +1178,8 @@ body {
       &.hosting {
         padding: 20px 35px;
         .title {
+          align-items: unset;
+          margin-top: 10px;
           h3 {
             font-size: 16px;
           }
@@ -1264,6 +1268,7 @@ body {
       .description {
         padding-top: 5px;
         text-align: center;
+        width: 100%;
         p {
           font-family: "Gotham Book";
           white-space: pre-wrap;
@@ -2199,6 +2204,7 @@ body {
                 .text-item {
                   margin-top: 15px;
                   text-align: left;
+                  width: 100%;
                   h3 {
                     margin-bottom: 20px;
                     color: #fff;
@@ -2292,6 +2298,7 @@ body {
                 p {
                   text-align: left;
                   margin-bottom: 20px;
+                  width: 100%;
                 }
               }
               .avatar {
@@ -2389,6 +2396,7 @@ body {
                 p {
                   text-align: left;
                   margin-bottom: 20px;
+                  width: 100%;
                 }
               }
               .avatar {
@@ -3513,6 +3521,7 @@ body {
               align-items: flex-end;
               p {
                 text-align: center;
+                padding: 0px 14px 10px 14px;
               }
             }
             .server-item {
@@ -4904,6 +4913,7 @@ body {
               p {
                 font-size: 18px;
                 text-align: unset;
+                padding: 0px 20px 10px 20px;
               }
             }
             .server-item {
