--- a/public/css/app.css
+++ b/public/css/app.css
@@ -899,6 +899,8 @@ body {
   right: 0;
   top: 2px;
   fill: #8088a4;
+  width: 20px;
+  height: 20px;
 }
 
 .page .main .plan-item .options .item .popper:hover {
@@ -1427,6 +1429,11 @@ body {
   padding: 20px 35px;
 }
 
+.page .main .guide-card.hosting .title {
+  align-items: unset;
+  margin-top: 10px;
+}
+
 .page .main .guide-card.hosting .title h3 {
   font-size: 16px;
 }
@@ -1538,6 +1545,7 @@ body {
 .page .main .text-card .description {
   padding-top: 5px;
   text-align: center;
+  width: 100%;
 }
 
 .page .main .text-card .description p {
@@ -2640,6 +2648,7 @@ body {
 .page .main .hosting-page .hosting-section.server-group .server-item .server-cards .deploy-item .text-item {
   margin-top: 15px;
   text-align: left;
+  width: 100%;
 }
 
 .page .main .hosting-page .hosting-section.server-group .server-item .server-cards .deploy-item .text-item h3 {
@@ -2748,6 +2757,7 @@ body {
 .page .main .hosting-page .hosting-section.manage .body .item .text p {
   text-align: left;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .page .main .hosting-page .hosting-section.manage .body .item .avatar {
@@ -2862,6 +2872,7 @@ body {
 .page .main .hosting-page .hosting-section.scale .body .item .text p {
   text-align: left;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .page .main .hosting-page .hosting-section.scale .body .item .avatar {
@@ -4128,6 +4139,7 @@ body {
 
   .page .main .hosting-page .hosting-section.server-group .header p {
     text-align: center;
+    padding: 0px 14px 10px 14px;
   }
 
   .page .main .hosting-page .hosting-section.server-group .server-item .server-cards.custom {
@@ -5404,6 +5416,7 @@ body {
   .page .main .hosting-page .hosting-section.server-group .header p {
     font-size: 18px;
     text-align: unset;
+    padding: 0px 20px 10px 20px;
   }
 
   .page .main .hosting-page .hosting-section.server-group .server-item p {
